--- a/source/index.html
+++ b/source/index.html
@@ -334,8 +334,10 @@
           <span>Инвестируйте и получаете ежемесячный доход</span>
         </li>
       </ol>
-      <a class="steps__btn btn btn--accent" aria-label="Оставить заявку">Оставить заявку</a>
-      <a class="steps__feadback btn btn--transparent" aria-label="Необходимые документы">Необходимые документы</a>
+      <div class="steps__btn-wrapper">
+        <a class="steps__btn btn btn--accent" aria-label="Оставить заявку">Оставить заявку</a>
+        <a class="steps__feadback btn btn--transparent" aria-label="Необходимые документы">Необходимые документы</a>
+      </div>
     </section>
     <section class="main__review review">
       <div class="review__content-wrapper">
@@ -382,8 +384,10 @@
         <a class="review__more btn btn--accent" href="#" aria-label="Больше отзывов">Больше отзывов</a>
         <div class="review__guarantees">
           <h3>Гарантии</h3>
-          <p>Каждая сделка подкреплена залогом в виде ликвидной недвижимости. Ее рыночная стоимость минимум в 2 раза выше суммы инвестиций, что перекрывает риски </p>
-          <a href="#" class="review__consult-btn btn btn--accent" aria-label="Получить консультацию">Получить консультацию</a>
+          <div class="review__guarantees-wrapper">
+            <p>Каждая сделка подкреплена залогом в виде ликвидной недвижимости. Ее рыночная стоимость минимум в 2 раза выше суммы инвестиций, что перекрывает риски </p>
+            <a href="#" class="review__consult-btn btn btn--accent" aria-label="Получить консультацию">Получить консультацию</a>
+          </div>
         </div>
       </div>
     </section>
