--- a/source/index.html
+++ b/source/index.html
@@ -7,10 +7,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="Печатные платы, производство печатных плат, монтаж печатных плат, печатные платы Мытищи">
   <title>Фондовая биржа</title>
-  <!-- <link rel="preload" href="fonts/ptmono-regular.woff2" as="font" crossorigin="">
-  <link rel="preload" href="fonts/roboto-medium.woff2" as="font" crossorigin="">
-  <link rel="preload" href="fonts/robotocondensed-bold.woff2" as="font" crossorigin="">
-  <link rel="preload" href="fonts/robotocondensed-regular.woff2" as="font" crossorigin=""> -->
+  <link rel="preload" href="fonts/SFUIDisplay-Regular.woff2" as="font" crossorigin="">
+  <link rel="preload" href="fonts/SFUIDisplay-Medium.woff2" as="font" crossorigin="">
+  <link rel="preload" href="fonts/SFUIDisplay-Semibold.woff2" as="font" crossorigin="">
+  <link rel="preload" href="fonts/SFUIDisplay-Bold.woff2" as="font" crossorigin="">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body class="page">
@@ -145,8 +145,8 @@
       <h2>Варианты инвестирования</h2>
       <div class="options__wrapper">
         <div class="options__controls">
-          <button type="button" class="options__control options__control--active">Доверительное управление (ДУ)</button>
-          <button type="button" class="options__control">Финансирование конкретной сделки</button>
+          <button class="options__control options__control--active">Доверительное управление (ДУ)</button>
+          <button class="options__control">Финансирование конкретной сделки</button>
         </div>
         <div class="options__container options__container--active">
           <div class="options__chapter">
@@ -279,7 +279,7 @@
                 <div class="range-slider__progress">
                   <div class="range-slider__controls">
                     <div class="range-slider__scale"></div>
-                    <button class="range-slider__max" style="left:33%" type="button"
+                    <button class="range-slider__max" style="left:32%" type="button"
                       aria-label="максимальное значение"></button>
                   </div>
                 </div>
